fixed center aligned buttons in learn more section

--- a/css/styles.css
+++ b/css/styles.css
@@ -60,3 +60,6 @@ h1{
 .btn{
     margin: 0%, 3%;
 }
+.learn-more{
+    text-align: left;
+}
